# Syn-Syu

./: .gitignore  LICENSE  PKGBUILD  README.md
docs/: Syn-Syu_Overview.md  enhancing_syn-syu  sse_bash_v_1_1.md  sse_bash_v_1_2.md  sse_python_v_1_1.md  sse_rust_v_1_1.md  sse_rust_v_1_2.md  sse_v_1_1.md  synspek.yaml  synspek_checks.yaml
examples/: config.toml
synsyu/: syn-syu
synsyu/lib/: cli.sh  commands.sh  common.sh  config.sh  driver.sh  helpers.sh  logging.sh  manifest.sh  plan.sh
synsyu_core/: Cargo.toml  build.rs
synsyu_core/src/: build_info.rs  config.rs  flatpak.rs  fwupd.rs  log_api.rs  main.rs  manifest.rs  mirrors.rs  pacman.rs  plan.rs  space.rs  updates.rs
tests/: aur_helper_retry_classifier.sh
tools/: install_syn-syu.sh  uninstall_syn-syu.sh
