[package]
name = "synsyu_core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CmdDraven/Syn-Syu"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
urlencoding = "2.1.3"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
libc = "0.2"
